--- a/ukr-list.html
+++ b/ukr-list.html
@@ -23,7 +23,7 @@
     <header>
         <div class="nav-container">
             <div class="info-text">
-                <a href="index"><span>Ukraine</span> Community List</a>
+                <a href="index"><span>Ukraine</span> List</a>
             </div>
             <div class="nav-group">
                 <div class="nav" id="home">
