--- a/index.html
+++ b/index.html
@@ -113,82 +113,73 @@
                 behavior: 'smooth'
             });
         }
-        document.getElementById('obbyForm').addEventListener('submit', function (event) {
-            event.preventDefault();
+        document.getElementById('obbyForm').addEventListener('submit', function(event) {
+                event.preventDefault();
 
-            // Collect form data
-            let formData = {
-                region: document.getElementById('region').value,
-                title: document.getElementById('title').value,
-                verifier: document.getElementById('verifier').value,
-                link: document.getElementById('link').value,
-                gamelink: document.getElementById('gamelink').value,
-                opinions: document.getElementById('opinions').value // Excluded opinions here
-            };
+                    // Collect form data
+                        let formData = {
+                                region: document.getElementById('region').value,
+                                        title: document.getElementById('title').value,
+                                                verifier: document.getElementById('verifier').value,
+                                                        link: document.getElementById('link').value,
+                                                                gamelink: document.getElementById('gamelink').value,
+                                                                        opinions: document.getElementById('opinions').value
+                                                                            };
 
-            // Remove opinions from formData (if it exists)
-            delete formData.opinions;
+                                                                                // Create a copy of formData without the opinions
+                                                                                    let formDataForJson = { ...formData };
+                                                                                        delete formDataForJson.opinions;
 
-            // Send data to Discord webhook
-            sendToDiscord(formData);
-        });
+                                                                                            // Send data to Discord webhook
+                                                                                                sendToDiscord(formData, formDataForJson);
+                                                                                                });
 
-        function sendToDiscord(formData) {
-            // Discord webhook URL
-            let webhookURL =
-                'https://discord.com/api/webhooks/1253170764220338217/Us_FAz0OpOlbyBKigD_EBWyTic3LRZTiTrf1iJj2vKRiusaBomymtmTS3B70eXlgAHDG'; // Replace with your Discord webhook URL
+                                                                                                function sendToDiscord(formData, formDataForJson) {
+                                                                                                    // Discord webhook URL
+                                                                                                        let webhookURL = 'https://discord.com/api/webhooks/1253170764220338217/Us_FAz0OpOlbyBKigD_EBWyTic3LRZTiTrf1iJj2vKRiusaBomymtmTS3B70eXlgAHDG'; // Replace with your Discord webhook URL
 
-            // Construct embed message
-            let embedMessage = {
-                embeds: [{
-                    title: 'New Obby Submission',
-                    description: `**Region:** ${formData.region}\n**Verifier:** ${formData.verifier}`,
-                    fields: [{
-                            name: 'Title',
-                            value: formData.title
-                        },
-                        {
-                            name: 'Video Link',
-                            value: formData.link
-                        },
-                        {
-                            name: 'Game Link',
-                            value: formData.gamelink
-                        }
-                    ],
-                    color: 0x7289da // Discord blue color
-                }]
-            };
+                                                                                                            // Construct embed message
+                                                                                                                let embedMessage = {
+                                                                                                                        embeds: [{
+                                                                                                                                    title: 'New Obby Submission',
+                                                                                                                                                description: `**Region:** ${formData.region}\n**Verifier:** ${formData.verifier}\n**Opinions:** ${formData.opinions}`,
+                                                                                                                                                            fields: [
+                                                                                                                                                                            { name: 'Title', value: formData.title },
+                                                                                                                                                                                            { name: 'Video Link', value: formData.link },
+                                                                                                                                                                                                            { name: 'Game Link', value: formData.gamelink }
+                                                                                                                                                                                                                        ],
+                                                                                                                                                                                                                                    color: 0x7289da // Discord blue color
+                                                                                                                                                                                                                                            }]
+                                                                                                                                                                                                                                                };
 
-            // Convert form data to JSON string
-            let jsonData = JSON.stringify(formData, null, 2);
+                                                                                                                                                                                                                                                    // Convert formDataForJson to JSON string
+                                                                                                                                                                                                                                                        let jsonData = JSON.stringify(formDataForJson, null, 2);
 
-            // Add JSON data as another field in the embed
-            embedMessage.embeds[0].fields.push({
-                name: 'JSON Data',
-                value: '```json\n' + jsonData + '\n```'
-            });
+                                                                                                                                                                                                                                                            // Add JSON data as another field in the embed
+                                                                                                                                                                                                                                                                embedMessage.embeds[0].fields.push({ name: 'JSON Data', value: '```json\n' + jsonData + '\n```' });
 
-            // Send data via fetch to Discord webhook
-            fetch(webhookURL, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify(embedMessage),
-                })
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Network response was not ok');
-                    }
-                    console.log('Form submitted successfully!');
-                    alert('Form submitted successfully!');
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    alert('An error occurred while submitting the form.');
-                });
-        }
+                                                                                                                                                                                                                                                                    // Send data via fetch to Discord webhook
+                                                                                                                                                                                                                                                                        fetch(webhookURL, {
+                                                                                                                                                                                                                                                                                method: 'POST',
+                                                                                                                                                                                                                                                                                        headers: {
+                                                                                                                                                                                                                                                                                                    'Content-Type': 'application/json',
+                                                                                                                                                                                                                                                                                                            },
+                                                                                                                                                                                                                                                                                                                    body: JSON.stringify(embedMessage),
+                                                                                                                                                                                                                                                                                                                        })
+                                                                                                                                                                                                                                                                                                                            .then(response => {
+                                                                                                                                                                                                                                                                                                                                    if (!response.ok) {
+                                                                                                                                                                                                                                                                                                                                                throw new Error('Network response was not ok');
+                                                                                                                                                                                                                                                                                                                                                        }
+                                                                                                                                                                                                                                                                                                                                                                console.log('Form submitted successfully!');
+                                                                                                                                                                                                                                                                                                                                                                        alert('Form submitted successfully!');
+                                                                                                                                                                                                                                                                                                                                                                            })
+                                                                                                                                                                                                                                                                                                                                                                                .catch(error => {
+                                                                                                                                                                                                                                                                                                                                                                                        console.error('Error:', error);
+                                                                                                                                                                                                                                                                                                                                                                                                alert('An error occurred while submitting the form.');
+                                                                                                                                                                                                                                                                                                                                                                                                    });
+                                                                                                                                                                                                                                                                                                                                                                                                    }
+                                                                                                                                                                                                                                                                                                                                                                                                    
+        })
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     <script>
