--- a/public/universal-list.html
+++ b/public/universal-list.html
@@ -44,6 +44,7 @@
                         <a href="voc-list">Vietnamese List</a>
                         <a href="ukr-list">Ukraine List</a>
                         <a href="koc-list">Korean List</a>
+                        <a href="mys-list">Malaysian List</a>
                     </div>
                 </div>
                 <div class="nav">
